--- a/index.html
+++ b/index.html
@@ -10,12 +10,13 @@
 
     <a href="/">Web</a>
     <a href="/">Studio</a>
-
-    <ul>
-      <li><a href="">Studio</a></li>
-      <li><a href="">Portfolio</a></li>
-      <li><a href="">Contacts</a></li>
-    </ul>
+    <nav>
+      <ul>
+        <li><a href="">Studio</a></li>
+        <li><a href="">Portfolio</a></li>
+        <li><a href="">Contacts</a></li>
+      </ul>
+    </nav>
 
     <address>
       <ul>
@@ -68,7 +69,7 @@
         <ul>
           <li>
             <img
-              src="/images/img1.png"
+              src="/images/img1.jpg"
               alt="workmate1"
               width="264"
               height="260"
@@ -78,7 +79,7 @@
           </li>
           <li>
             <img
-              src="/images/img2.png"
+              src="/images/img2.jpg"
               alt="workmate2"
               width="264"
               height="260"
@@ -88,7 +89,7 @@
           </li>
           <li>
             <img
-              src="/images/img3.png"
+              src="/images/img3.jpg"
               alt="workmate3"
               width="264"
               height="260"
@@ -98,7 +99,7 @@
           </li>
           <li>
             <img
-              src="/images/img4.png"
+              src="/images/img4.jpg"
               alt="workmate4"
               width="264"
               height="260"
