--- a/index.html
+++ b/index.html
@@ -6,25 +6,24 @@
     <title>Web Studio</title>
   </head>
   <body>
-    <header></header>
+    <header>
+      <nav>
+        <a href="./index.html">WebStudio</a>
 
-    <a href="/">Web</a>
-    <a href="/">Studio</a>
-    <nav>
-      <ul>
-        <li><a href="">Studio</a></li>
-        <li><a href="">Portfolio</a></li>
-        <li><a href="">Contacts</a></li>
-      </ul>
-    </nav>
+        <ul>
+          <li><a href="">Studio</a></li>
+          <li><a href="">Portfolio</a></li>
+          <li><a href="">Contacts</a></li>
+        </ul>
+      </nav>
 
-    <address>
-      <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
-      </ul>
-    </address>
-
+      <address>
+        <ul>
+          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a href="tel:+110001111111">+11 (000) 111-11-11</a></li>
+        </ul>
+      </address>
+    </header>
     <main>
       <section>
         <h1>Effective Solutions for Your Business</h1>
@@ -32,6 +31,7 @@
       </section>
 
       <section>
+        <h2>Advantages</h2>
         <ul>
           <li>
             <h3>Strategy</h3>
@@ -69,7 +69,7 @@
         <ul>
           <li>
             <img
-              src="/images/img1.jpg"
+              src="./images/img1.jpg"
               alt="workmate1"
               width="264"
               height="260"
@@ -79,7 +79,7 @@
           </li>
           <li>
             <img
-              src="/images/img2.jpg"
+              src="./images/img2.jpg"
               alt="workmate2"
               width="264"
               height="260"
@@ -89,7 +89,7 @@
           </li>
           <li>
             <img
-              src="/images/img3.jpg"
+              src="./images/img3.jpg"
               alt="workmate3"
               width="264"
               height="260"
@@ -99,7 +99,7 @@
           </li>
           <li>
             <img
-              src="/images/img4.jpg"
+              src="./images/img4.jpg"
               alt="workmate4"
               width="264"
               height="260"
@@ -112,8 +112,7 @@
     </main>
 
     <footer>
-      <a href="/">Web</a>
-      <a href="/">Studio</a>
+      <a href="./index.html">WebStudio</a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing & growth solutions.
